# anomaly_detection

./: CMakeLists.txt  README.MD  requirements.txt  visu.py
src/: CMakeLists.txt  main_anomaly_detection.cpp
src/Utilities/: LibImages.cpp  LibImages.h  cmd_option.h  comparators.cpp  comparators.h  decompose.py  nfa.cpp  nfa.h
src/Utilities/PartitionTree/: forestManager.cpp  forestManager.h  partitionTree.h  prmTree.h  vptree.cpp  vptree.h
src/Utilities/PatchManager/: databasePatchManager.cpp  databasePatchManager.h  imagePatchManager.cpp  imagePatchManager.h  patchManager.h
src/Utilities/PatchSearch/: .localRefinement.cpp.swp  localPatchPropagation.h  localRefinement.cpp  localRefinement.h
src/model/: CMakeLists.txt  model.cpp  model.h  params.h
